# omni_search

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: CHANGELOG.md  avif-setup.md  model-performance.md  provider-policy-update.md  sdk-runtime-update-note.md
scripts/: release.ps1  release.py
src/: bundle.rs  config.rs  embedding.rs  error.rs  image_formats.rs  lib.rs  main.rs  manifest.rs  runtime.rs  runtime_env.rs  runtime_loader.rs  score.rs
src/backend/: chinese_clip.rs  fgclip.rs  mod.rs  openclip.rs
src/preprocess/: chinese_clip.rs  clip_image.rs  fgclip.rs  image_path.rs  mod.rs
tests/: quickstart.rs
