[package]
name = "omni_search"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "A unified Rust SDK for multimodal embedding and similarity search."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["embedding", "multimodal", "onnx", "search", "ort"]
categories = ["api-bindings", "computer-vision"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png", "webp"] }
ndarray = "0.17"
ort = "2.0.0-rc.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }

[dev-dependencies]
tempfile = "3.23"
