[package]
name = "omni_search"
version = "0.2.1"
edition = "2024"
rust-version = "1.94"
default-run = "omni_search"
description = "A unified Rust SDK for multimodal embedding and similarity search."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zihuv/omni_search"
documentation = "https://docs.rs/omni_search"
keywords = ["embedding", "multimodal", "onnx", "search", "ort"]
categories = ["api-bindings", "computer-vision"]

[dependencies]
dotenvy = "0.15.7"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png", "webp"] }
memmap2 = "0.9"
ndarray = "0.17"
num_cpus = "1.17"
ort = { version = "2.0.0-rc.12", features = ["coreml", "directml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }

[dev-dependencies]
tempfile = "3.23"
